voting-manifest/result-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-app
  labels:
    name: demo-result-app
    app: demo-voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: results-app
  template:
    metadata:
      labels:
        app: results-app
    spec:
      containers:
        - name: results-app
          image: "malik0x/result-app:2.1"
          ports:
            - containerPort: 8085
