voting-manifest/voting-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
  labels:
    app: demo-voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-voting-app
  template:
    metadata:
      labels:
        app: demo-voting-app         
    spec:
      containers:
        - name: voting-app
          image: "lukmanadeokun31/voting-service:latest"
          ports:
            - containerPort: 8083
