voting-manifest/worker-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app
  labels:
    app: worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
        - name: worker-app
          image: lukmanadeokun31/worker-service:latest
          ports:
            - containerPort: 8084
