voting-manifest/voting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    app: demo-voting-app
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: demo-voting-app
