voting-manifest/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: worker-app
