voting-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port:
                  number: 8083
          - path: /results
            pathType: Prefix
            backend:
              service:
                name: results-service
                port:
                  number: 8085
